refactor(christmas): 클래스 이름 변경, 임시로 패키지로 옮기기, record를 다시 class로 변경(카테고리를 객체 내에서 찾아냄)